--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.607.0",
+		"bluebird": "^3.7.2",
+		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mysql2": "^2.1.0"
+		"js-base64": "^2.5.1",
+		"multer": "^1.4.2",
+		"multer-s3": "^2.9.0",
+		"mysql2": "^2.1.0",
+		"path": "^0.12.7",
+		"url": "^0.11.0"
 	}
 }
