--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@hapi/joi": "^17.1.0",
 		"aws-sdk": "^2.607.0",
 		"bluebird": "^3.7.2",
 		"body-parser": "^1.19.0",
