--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"multer-s3": "^2.9.0",
 		"mysql2": "^2.1.0",
 		"path": "^0.12.7",
-		"url": "^0.11.0"
+		"url": "^0.11.0",
+		"winston": "^3.2.1"
 	}
 }
